--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -27,24 +27,5 @@ jobs:
       - name: Terraform Validate
         run: terraform validate
 
-  trivy:
-    name: Trivy Security Scan
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v6 # v6.0.0
-
-      - name: Run Trivy vulnerability scanner in IaC mode
-        uses: aquasecurity/trivy-action@915b19bbe73b92a6cf82a1bc12b087c9a19a5fe2 # 0.28.0
-        with:
-          scan-type: 'config'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-          scan-ref: '.'
-          severity: 'MEDIUM,HIGH,CRITICAL'
-        continue-on-error: true
-
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@fdbfb4d2750291e159f0156def62b853c2798ca2 # v4.31.5
-        with:
-          sarif_file: 'trivy-results.sarif'
+  security-scan:
+    uses: nsbno/platform-actions/.github/workflows/helpers.security-scan.terraform.yml@trivy-github-action
